<resources>
    <string name="app_name">AirDMM!</string>
    <string name="DelayTime">DelayTime</string>
    <string name="WaitingColor">Waiting Color</string>
    <string name="WaitingTextColor">Waiting Text Color</string>
    <string name="ActivityColor">Activity Color</string>
    <string name="ActivityTextColor">Activity Text Color</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Restart">Restart</string>
    <string name="SaveConfig">SaveConfig</string>
    <string name="KeyWord">KeyWord</string>
    <string name="PodPackage">POD Package</string>
    <string name="BlackMode">BlackMode</string>
    <string name="PodBM">POD Package Blacklist Mode</string>
    <string name="PodWM">POD Package Whitelist Mode</string>
    <string name="KwBM">Keywords Blacklist Mode</string>
    <string name="Pod">POD mean "Post on DMM"</string>
    <string name="FloatyNotification">Floaty foreground notification</string>
    <string name="DelayPosition">Delay Position</string>
</resources>
